# proyecto_ciegos-

./: .env.example  .gitignore  CONFIGURACION.md  README.md  math_transcriptor_desktop.py  pyproject.toml  requirements.txt
core/: __init__.py  audio_manager.py  camera_manager.py  openai_analyzer.py
core/prompts/: educational_system.j2  educational_user.j2  vision_system.j2  vision_user.j2
doc/: ACADEMIC_PAPER_OUTLINE.md  ARCHITECTURE_DOCUMENTATION.md  CAMBIOS_GEOMETRIA.md  IMPROVEMENT_SUGGESTIONS.md  README_GEOMETRIA.md  USER_DOCUMENTATION.md
docs/: diagrama_flujo_geomai.html
test/: app.py  app_with_camera_selection.py  sorteo_libro.py  subir_sitios_supabase.py  test_embeddings.py  test_gemini.py  test_geometry_app.py  test_openai.py
utils/: __init__.py  config.py  styles.py
